# reactor-rust

./: .travis.yml  Cargo.toml  README.md
examples/mono/: main.rs
src/: lib.rs  prelude.rs  schedulers.rs  spi.rs
src/flux/: mod.rs  spi.rs
src/mono/: creation.rs  creation_success.rs  do_finally.rs  do_on_complete.rs  do_on_error.rs  emitter.rs  error.rs  filter.rs  flatmap.rs  foreach.rs  future.rs  just.rs  lazy.rs  misc.rs  mod.rs  processor.rs  schedule_on.rs  spi.rs  transform.rs  transform_error.rs
tests/: mono_test.rs
