[package]
name = "reactor_rs"
version = "0.0.2"
authors = ["Jeffsky <jjeffcaii@outlook.com>"]
edition = "2018"
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/jjeffcaii/reactor-rust"
homepage = "https://github.com/jjeffcaii/reactor-rust"
description = "reactor-rust is an implementation of the Reactive-Streams."

[dependencies]
log = "0.4.8"
futures = "0.1.29"

[dev-dependencies]
env_logger = "0.6.2"
rand = "0.7.0"

[[example]]
name = "mono"
path = "examples/mono/main.rs"
